<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="za.co.jpsoft.winkerkreader.MainActivity">
    <item
        android:id="@+id/kyk_lidmaat_detail"
        android:title="@string/lidmaatlistmenu_detail" />
    <item
        android:id="@+id/submenu_bel"
        android:title="@string/lidmaatlistmenu_skakel">
        <menu>
            <group android:id="@+id/bel_sel_group">
                <item
                    android:id="@+id/bel_selfoon"
                    android:title="@string/lidmaatlistmenu_bel_selfoon" />
            </group>
            <item
                android:id="@+id/bel_landlyn"
                android:title="@string/lidmaatlistmenu_bel_landlyn" />
        </menu>
    </item>
    <item
        android:id="@+id/submenu_teks"
        android:title="@string/lidmaatlistmenu_teks">
        <menu>
            <group android:id="@+id/sel_group">
                <item
                    android:id="@+id/stuur_sms"
                    android:title="@string/lidmaatlistmenu_stuur_sms" />
                <item
                    android:id="@+id/stuur_whatsapp"
                    android:title="@string/lidmaatlistmenu_stuur_whatsapp" />
                <item
                    android:id="@+id/stuur_whatsapp2"
                    android:title="@string/lidmaatlistmenu_stuur_whatsapp2" />
                <item
                    android:id="@+id/stuur_whatsapp3"
                    android:title="@string/lidmaatlistmenu_stuur_whatsapp3" />
            </group>
            <item
                android:id="@+id/stuur_epos"
                android:title="@string/lidmaatlistmenu_stuur_epos" />
        </menu>
    </item>
    <item
        android:id="@+id/submenu_ander"
        android:title="@string/lidmaatlistmenu_ander">
        <menu>
            <item
                android:id="@+id/kopieer"
                android:title="@string/lidmaatlistmenu_copy_to_clipboard" />
            <item
                android:id="@+id/copy_to_contacts"
                android:title="@string/lidmaatlistmenu_copy_to_contacts" />
            <item
                android:id="@+id/nota"
                android:title="@string/lidmaatlistmenu_nota" />
        </menu>
    </item>
    <item
        android:id="@+id/voeg_nota_by"
        android:orderInCategory="1"
        android:title="@string/voeg_nota_by" />

    <item
        android:id="@+id/stel_herinnering"
        android:orderInCategory="2"
        android:title="@string/stel_herinnering" />
</menu>