<?xml version="1.0" encoding="utf-8"?>
<!-- Options menu for the CatalogActivity -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.activities.TransactionSearchActivity">
    <item
        android:id="@+id/aktief_radio_group"
        android:title="@string/mainmenu_filter_aktief"
        app:actionLayout="@layout/aktief_radio"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:title="@string/mainmenu_soek"
        app:showAsAction="collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
         />
    <item
        android:id="@+id/filter_options"
        android:title="@string/mainmenu_filter">
    </item>
    <item
        android:id="@+id/action_bediening"
        android:title="@string/mainmenu_bediening"
        app:showAsAction="never" />
    <item
        android:title="@string/mainmenu_taggedtitle">
        <menu>
        <item
            android:id="@+id/tagged"
            android:title="@string/mainmenu_tagged">
        </item>
        <item
            android:id="@+id/deselect"
            android:title="@string/mainmenu_untagged"
            app:showAsAction="never"
            />
        </menu>
    </item>
    <item
        android:title="@string/mainmenu_sorteer"
        android:id="@+id/menu_sorteer_titel"
        app:showAsAction="never" >
        <menu >
            <item
                android:id="@+id/sort_wyk"
                android:title="@string/mainmenu_sort_wyk"
                app:showAsAction="never" />
            <item
                android:id="@+id/sort_van"
                android:title="@string/mainmenu_sort_van"
                app:showAsAction="never" />
            <item
                android:id="@+id/sort_ouderdom"
                android:title="@string/mainmenu_sort_ouderdom"
                app:showAsAction="never" />
            <item
                android:id="@+id/sort_adres"
                android:title="@string/mainmenu_sort_adres"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/verjaar"
                android:title="@string/mainmenu_sort_verjaar"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/sort_gesin"
                android:title="@string/mainmenu_sort_gesin"
                android:visible="true"
                app:showAsAction="never"
                />
        </menu>
    </item>
    <item
        android:title="@string/mainmenu_admin"
        android:id="@+id/menu_andmin_titel"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/laai"
                android:title="@string/mainmenu_laai"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/RegistreerActivity"
                android:title="@string/mainmenu_registreer"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/uitleg"
                android:title="@string/mainmenu_uitleg_funksies"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/menu_permissions"
                android:title="@string/mainmenu_manage_permissions"
                app:showAsAction="never" />
        </menu>
    </item>
    <item
        android:id="@+id/sms_verjaar"
        android:title="@string/mainmenu_sms_verjaar"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/argief"
        android:title="@string/mainmenu_argief"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_view_call_log"
        android:title="@string/mainmenu_view_call_log"
        app:showAsAction="never"
        />
</menu>